--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="dev.ldev.gpsicon">
 
-    <!-- <uses-permission android:name="android.permission.ACCESS_COARSE_UPDATES" />
-     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> -->
+    <!--
+     <uses-permission android:name="android.permission.ACCESS_COARSE_UPDATES" />
+     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    -->
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
@@ -13,7 +15,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.MainActivity"
+        <activity
+            android:name=".ui.MainActivity"
             android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,15 +30,16 @@
             android:enabled="true">
             <intent-filter>
                 <action android:name="android.location.PROVIDERS_CHANGED" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
-
         <receiver
             android:name=".receivers.BootReceiver"
             android:enabled="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
@@ -43,7 +47,9 @@
         <service
             android:name=".services.GpsObserveService"
             android:enabled="true"
-            android:exported="true"/>
+            android:exported="true" />
+
+        <activity android:name=".util.permissions.PermissionRequestActivity"></activity>
     </application>
 
 </manifest>
