--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,7 @@
             android:exported="true"
             android:permission="android.permission.ACCESS_FINE_LOCATION" />
 
+        <activity android:name=".util.permissions.PermissionRequestActivity"></activity>
 
     </application>
 
